--- a/README.Rmd
+++ b/README.Rmd
@@ -16,27 +16,18 @@ knitr::opts_chunk$set(
 # str.rdev
 
 <!-- badges: start -->
-[![R-CMD-check](https://github.com/StreamlineDataScience/str.rdev/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/StreamlineDataScience/str.rdev/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
-The goal of `str.rdev` is to download and process the Enron data set.
+The goal of str.rdev is for data cleaning and manipulation of the Enron email dataset, specifically an XLS attachment of data, and a small Shiny app to display the results.
 
 ## Installation
 
-You can install the development version of `str.rdev` from [GitHub](https://github.com/) with:
+You can install the released version of example from [GitHub](https://github.com) with:
 
 ``` r
-# install.packages("remotes")
-remotes::install_github("StreamlineDataScience/str.rdev")
+devtools::install_github("yanz333/str.rdev")
 ```
 
-## Example
+## Details
 
-This is a basic example which shows you how to solve a common problem:
-
-```{r example, eval = FALSE}
-library(str.rdev)
-## basic example code
-```
-
-
+Two paragraphs explaining what this package does.
