--- a/README.Rmd
+++ b/README.Rmd
@@ -18,8 +18,10 @@ knitr::opts_chunk$set(
 Provides functions for downloading and wrangling Enron data from an external source. This package also contains a Shiny app that can be used to explore this downloaded data.
 
 <!-- badges: start -->
-[![R-CMD-check](https://github.com/StreamlineDataScience/str.rdev/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/StreamlineDataScience/str.rdev/actions/workflows/R-CMD-check.yaml)
+[![R-CMD-check](https://github.com/dsobolew/str.rdev/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/dsobolew/str.rdev/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
+
+
 
 The goal of `str.rdev` is to download and process the Enron data set.
 
