--- a/README.Rmd
+++ b/README.Rmd
@@ -40,15 +40,15 @@ library(str.rdev)
 ```
 
 ## Potential Issues
-- Assumes headers will not (i.e. Maximum, Avg) change as grepl() is used to remove them. A different header will potentially break the code
-- Both functions assume the file read/saved with be an .xls, different file types could be a parameter
-- enron_download_data() downloads data from the exact same link
-- 
+- Assumes headers will not change (i.e. Maximum, Avg) as grepl() is used to find and remove those columns. A different header will potentially break the code.
+- Both functions assume the file downloads/saved with be an .xls; allowing for different file types could be a parameter
+- enron_download_data() downloads data from the exact same link. Assumes data is on the first sheet.
+- Assumes the date field will be an integer and exported using Excel's base date of Dec 30, 1899.
 
 ## Shiny app improvements
-- Use golem package as it creates a Shiny app into an R package architecture
+- Use golem package as it creates a Shiny app inside an R package architecture
 - use shinydashboard + shinydashboardthemes + CSS to make app look less "out of the box"
 - add company logo and use company colors
-- Put plotly chart inside a module with parameters on which to plot
+- Put plotly chart inside a module with parameters on which variables to plot
 - separate app.R into ui and server
 - Add total deliveries and receipts, and the difference and put all in value boxes
